[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enemies/Bat/Bat.gd" type="Script" id=1]
[ext_resource path="res://platform_metroidvania asset pack v1.01/enemies sprites/fly_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bat/BatFSM.gd" type="Script" id=3]
[ext_resource path="res://UI/AudioRandomizer.gd" type="Script" id=4]
[ext_resource path="res://HitBox.gd" type="Script" id=5]
[ext_resource path="res://Sounds/HurtPlayerSound.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 2.61609

[sub_resource type="CircleShape2D" id=2]
radius = 3.35363

[sub_resource type="Animation" id=3]
resource_name = "dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "fall"
length = 0.36
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
length = 0.36
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17 ]
}

[sub_resource type="Animation" id=6]
resource_name = "hurt"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 29.4819

[node name="Bat" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )
speed = 20
inverse_direction = true

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 8
hframes = 5
frame = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.297302, -0.0743256 )
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.297302, -0.0743256 )
shape = SubResource( 2 )

[node name="Sound" type="AudioStreamPlayer" parent="HitBox"]
stream = ExtResource( 6 )
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 3 )
anims/fall = SubResource( 4 )
anims/fly = SubResource( 5 )
anims/hurt = SubResource( 6 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 7 )

[node name="WallRayCasts" type="Node2D" parent="."]

[node name="RightRayCast" type="RayCast2D" parent="WallRayCasts"]
enabled = true
cast_to = Vector2( 8, 0 )

[node name="LeftRayCast" type="RayCast2D" parent="WallRayCasts"]
enabled = true
cast_to = Vector2( -8, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
